--- a/package.json
+++ b/package.json
@@ -47,13 +47,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
-    "nedb": "^1.8.0",
+    "json-server": "^0.16.3",
     "nodemon": "^2.0.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-toastify": "^7.0.4"
   }
 }
